--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ bcrypt==4.0.1
 gunicorn==21.2.0
 python-dateutil==2.8.2
 openpyxl==3.1.2
-pandas==2.0.3
-matplotlib==3.7.1
+pandas>=2.2.0
+matplotlib>=3.8.0
 seaborn==0.12.2
 Pillow==10.4.0
 psycopg2-binary==2.9.9
@@ -25,6 +25,6 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-flask==1.3.0
 pytest-mock==3.12.0
-coverage==7.3.2
+coverage>=7.4.0
 factory-boy==3.3.0
 faker==20.1.0
